--- a/Code/library-management-system/package.json
+++ b/Code/library-management-system/package.json
@@ -17,7 +17,10 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "db:migrate": "cross-env NODE_ENV=development ts-node src/cli/database.cli.ts migrate",
+    "db:migrate:new": "cross-env NODE_ENV=development ts-node src/cli/database.cli.ts migrate:new",
+    "db:migrate:status": "cross-env NODE_ENV=development ts-node src/cli/database.cli.ts migrate:status"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -25,12 +28,20 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^11.0.6",
+    "better-sqlite3": "^11.9.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
-    "mysql2": "^3.13.0",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.4.7",
+    "dotenv-cli": "^8.0.0",
+    "joi": "^17.13.3",
+    "knex": "^3.1.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "swagger-ui-express": "^5.0.1"
+    "sqlite3": "^5.1.7",
+    "swagger-ui-express": "^5.0.1",
+    "umzug": "^3.8.2",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
