--- a/Code/library-management-system/.gitignore
+++ b/Code/library-management-system/.gitignore
@@ -57,3 +57,8 @@ pids
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+# lock
+yarn.lock
+package-lock.json
+pnpm-lock.yaml
